# extended-configparser

./: .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  test.py
src/extended_configparser/: __init__.py  interpolator.py  matcher.py  parser.py
src/extended_configparser/configuration/: __init__.py  configuration.py  entries.py
src/extended_configparser/configuration/entries/: __init__.py  base.py  confirmation.py  section.py  selection.py
tests/: dev_requirements.txt  test_config_matcher.py  test_env_interpolation.py  test_inquirer.py  test_parser.py
tests/data/: config1.cfg  config1_result.cfg  config2_result.cfg  env_config.cfg
