[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "extended-configparser"
version = "1.2.0"
authors = [{ name = "Valentin Schröter", email = "vasc9380@th-wildau.de" }]
description = "Extended config parser."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

classifiers = ["Programming Language :: Python :: 3"]

[project.optional-dependencies]
cli = ["InquirerPy"]
test = [
    "nox",
    "pytest-datadir",
    "pytest-mock",
    "pytest",
]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "extended-configparser[cli]",
    "extended-configparser[test]"
]



[tool.hatch.build.targets.wheel]
packages = ["src/extended_configparser"]

[project.urls]
Homepage = "https://github.com/vschroeter/extended-configparser"
Issues = "https://github.com/vschroeter/extended-configparser/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]



[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false
